# zodiac-leo

./: .gitignore  AGENTS.md  KNOWLEDGE.md  README.md  opencode.json  pyproject.toml
candidates/: README.md
channel/: README.md  channel.md  roadmap.md  signature-visual-system.md
docs/: episode-hil4-flow-contract.md  episode-lessons.md  operating-boundary.md  provider-platform-boundary.md  python-uv-policy.md  workflow-map.md
scripts/: bootstrap_episode_packet.py  collect_local_provenance_snapshot.py  create_layered_thumbnail.py  create_s01e01_thumbnail.py  create_v4_07_animated_proof.py  create_v5_readable_motion_proof.py  create_v6_cute_smooth_motion_proof.py  create_visual_layout_mockups.py  create_visual_safe_zone_proof_sheet.py  dev-python.sh  dry_run_visual_prompt_pack.py  episode_hil_flow.py  fix_all_pronouns.py  fix_e05_pronouns.py  fix_e05_subtitle_timing.py  gate_validation_helpers.py  intake_s01e05_audio.py  leo_resource_paths.py  make_all_subtitles_spoken.py  make_e05_subtitles_spoken.py  migrate_leo_new_machine.sh  polish_subtitles.py  render_s01e01_local.py  render_s01e02_local.py  render_s01e03_local.py  render_s01e04_local.py  render_s01e05_local.py  run-tests.sh  run_hil.sh  setup_google_drive_root.sh  subtitle_alignment_pipeline.py  subtitle_lane_policy.py  subtitle_production_timing_guard.py  suno-build-tracks.py  suno-copilot-server.py  update_all_tracking.py  upload_all_captions.py  verify-standalone.sh  youtube_api_captions.py  youtube_api_comment.py  (+4 more)
tests/: test_bootstrap_episode_packet.py  test_episode_hil_flow_source_quality.py  (+7 more)
(+293 files in other folders)
