[project]
name = "mellow-longplay"
version = "0.1.0"
description = "Source-first operating system for the Mellow Longplay channel."
requires-python = ">=3.11"
dependencies = [
  "pillow>=10,<12",
  "pytest>=8.4,<9",
  "google-api-python-client>=2.0,<3.0",
  "google-auth>=2.0,<3.0",
  "google-auth-oauthlib>=1.0,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
